cmake_minimum_required(VERSION 3.8)
project(10_03Lec)

set(CMAKE_CXX_STANDARD 11)

#set(SOURCE_FILES arrays.cpp)
#set(SOURCE_FILES multiDArray.cpp)
#set(SOURCE_FILES funcArray.cpp)
#set(SOURCE_FILES structArray.cpp)
#set(SOURCE_FILES arrayAsClassMember.cpp)
#set(SOURCE_FILES arrayChar.cpp)
#set(SOURCE_FILES copyString.cpp)
#set(SOURCE_FILES string1.cpp)
set(SOURCE_FILES inputOutputString.cpp)

add_executable(10_03Lec ${SOURCE_FILES})